<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image"
        />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/inputName"
        />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/text_view"
        android:textColor="@color/white"
    />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:text="@string/clear_button"
        />

    <Button
        android:id="@+id/makeLongOperation"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/make_long_operation"/>

    <ProgressBar
        android:id="@+id/longOperationProgress"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <Switch
        android:id="@+id/isInput"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_input_name"
        android:checked="true"

        />
    <CheckBox
        android:id="@+id/isLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_load"
        android:checked="true"
        />

</LinearLayout>